--- a/Post-Service/appsettings.json
+++ b/Post-Service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=db.lifelinks.nl;Uid=redeamer;Database=lifelinks_posts;Pwd=TnTDgx3kpoK4MJYh7H4c;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
